revert to display none from visibility hidden to correct vertical centering

--- a/css/reveal.css
+++ b/css/reveal.css
@@ -534,7 +534,7 @@ body {
 
 .reveal .slides>section,
 .reveal .slides>section>section {
-	visibility: hidden;
+	display: none;
 	position: absolute;
 	width: 100%;
 
@@ -566,7 +566,7 @@ body {
 
 .reveal .slides>section.present,
 .reveal .slides>section>section.present {
-	visibility: visible;
+	display: block;
 	z-index: 11;
 	opacity: 1;
 }
